--- a/3 - Pandas - DataFrames.ipynb
+++ b/3 - Pandas - DataFrames.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -206,7 +206,7 @@
        "6     318.523  17348075       9525067  0.915   America"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -892,23 +892,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Population       60.665\n",
-       "GDP             2167744\n",
-       "Surface Area     301336\n",
-       "HDI               0.873\n",
-       "Continent        Europe\n",
-       "Name: Italy, dtype: object"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyError",
+     "evalue": "'the label [Italy] is not in the [index]'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32mC:\\dev\\python\\installation\\lib\\site-packages\\pandas\\core\\indexing.py\u001b[0m in \u001b[0;36m_validate_key\u001b[1;34m(self, key, axis)\u001b[0m\n\u001b[0;32m   1789\u001b[0m                 \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0max\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcontains\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1790\u001b[1;33m                     \u001b[0merror\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1791\u001b[0m             \u001b[1;32mexcept\u001b[0m \u001b[0mTypeError\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\dev\\python\\installation\\lib\\site-packages\\pandas\\core\\indexing.py\u001b[0m in \u001b[0;36merror\u001b[1;34m()\u001b[0m\n\u001b[0;32m   1784\u001b[0m                                .format(key=key,\n\u001b[1;32m-> 1785\u001b[1;33m                                        axis=self.obj._get_axis_name(axis)))\n\u001b[0m\u001b[0;32m   1786\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'the label [Italy] is not in the [index]'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-11-a4e7a82f740f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Italy'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32mC:\\dev\\python\\installation\\lib\\site-packages\\pandas\\core\\indexing.py\u001b[0m in \u001b[0;36m__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   1476\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1477\u001b[0m             \u001b[0mmaybe_callable\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_apply_if_callable\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mobj\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1478\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_getitem_axis\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmaybe_callable\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0maxis\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1479\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1480\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_is_scalar_access\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\dev\\python\\installation\\lib\\site-packages\\pandas\\core\\indexing.py\u001b[0m in \u001b[0;36m_getitem_axis\u001b[1;34m(self, key, axis)\u001b[0m\n\u001b[0;32m   1909\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1910\u001b[0m         \u001b[1;31m# fall thru to straight lookup\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1911\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_validate_key\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1912\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_get_label\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0maxis\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1913\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\dev\\python\\installation\\lib\\site-packages\\pandas\\core\\indexing.py\u001b[0m in \u001b[0;36m_validate_key\u001b[1;34m(self, key, axis)\u001b[0m\n\u001b[0;32m   1796\u001b[0m                 \u001b[1;32mraise\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1797\u001b[0m             \u001b[1;32mexcept\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1798\u001b[1;33m                 \u001b[0merror\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1799\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1800\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_is_scalar_access\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\dev\\python\\installation\\lib\\site-packages\\pandas\\core\\indexing.py\u001b[0m in \u001b[0;36merror\u001b[1;34m()\u001b[0m\n\u001b[0;32m   1783\u001b[0m                 raise KeyError(u\"the label [{key}] is not in the [{axis}]\"\n\u001b[0;32m   1784\u001b[0m                                .format(key=key,\n\u001b[1;32m-> 1785\u001b[1;33m                                        axis=self.obj._get_axis_name(axis)))\n\u001b[0m\u001b[0;32m   1786\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1787\u001b[0m             \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'the label [Italy] is not in the [index]'"
+     ]
     }
    ],
    "source": [
@@ -917,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -951,42 +956,17 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>France</th>\n",
-       "      <td>63.951</td>\n",
-       "      <td>2833687</td>\n",
-       "      <td>640679</td>\n",
-       "      <td>0.888</td>\n",
-       "      <td>Europe</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Germany</th>\n",
-       "      <td>80.940</td>\n",
-       "      <td>3874437</td>\n",
-       "      <td>357114</td>\n",
-       "      <td>0.916</td>\n",
-       "      <td>Europe</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Italy</th>\n",
-       "      <td>60.665</td>\n",
-       "      <td>2167744</td>\n",
-       "      <td>301336</td>\n",
-       "      <td>0.873</td>\n",
-       "      <td>Europe</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         Population      GDP  Surface Area    HDI Continent\n",
-       "France       63.951  2833687        640679  0.888    Europe\n",
-       "Germany      80.940  3874437        357114  0.916    Europe\n",
-       "Italy        60.665  2167744        301336  0.873    Europe"
+       "Empty DataFrame\n",
+       "Columns: [Population, GDP, Surface Area, HDI, Continent]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1473,112 +1453,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Population</th>\n",
-       "      <th>GDP</th>\n",
-       "      <th>Surface Area</th>\n",
-       "      <th>HDI</th>\n",
-       "      <th>Continent</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Canada</th>\n",
-       "      <td>35.467</td>\n",
-       "      <td>1785387</td>\n",
-       "      <td>9984670</td>\n",
-       "      <td>0.913</td>\n",
-       "      <td>America</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>France</th>\n",
-       "      <td>63.951</td>\n",
-       "      <td>2833687</td>\n",
-       "      <td>640679</td>\n",
-       "      <td>0.888</td>\n",
-       "      <td>Europe</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Germany</th>\n",
-       "      <td>80.940</td>\n",
-       "      <td>3874437</td>\n",
-       "      <td>357114</td>\n",
-       "      <td>0.916</td>\n",
-       "      <td>Europe</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Italy</th>\n",
-       "      <td>60.665</td>\n",
-       "      <td>2167744</td>\n",
-       "      <td>301336</td>\n",
-       "      <td>0.873</td>\n",
-       "      <td>Europe</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Japan</th>\n",
-       "      <td>127.061</td>\n",
-       "      <td>4602367</td>\n",
-       "      <td>377930</td>\n",
-       "      <td>0.891</td>\n",
-       "      <td>Asia</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>United Kingdom</th>\n",
-       "      <td>64.511</td>\n",
-       "      <td>2950039</td>\n",
-       "      <td>242495</td>\n",
-       "      <td>0.907</td>\n",
-       "      <td>Europe</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>United States</th>\n",
-       "      <td>318.523</td>\n",
-       "      <td>17348075</td>\n",
-       "      <td>9525067</td>\n",
-       "      <td>0.915</td>\n",
-       "      <td>America</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                Population       GDP  Surface Area    HDI Continent\n",
-       "Canada              35.467   1785387       9984670  0.913   America\n",
-       "France              63.951   2833687        640679  0.888    Europe\n",
-       "Germany             80.940   3874437        357114  0.916    Europe\n",
-       "Italy               60.665   2167744        301336  0.873    Europe\n",
-       "Japan              127.061   4602367        377930  0.891      Asia\n",
-       "United Kingdom      64.511   2950039        242495  0.907    Europe\n",
-       "United States      318.523  17348075       9525067  0.915   America"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-00cf07b74dcd>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
     }
    ],
    "source": [
@@ -1799,107 +1686,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Population</th>\n",
-       "      <th>GDP</th>\n",
-       "      <th>Surface Area</th>\n",
-       "      <th>HDI</th>\n",
-       "      <th>Continent</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>France</th>\n",
-       "      <td>63.951</td>\n",
-       "      <td>2833687</td>\n",
-       "      <td>640679</td>\n",
-       "      <td>0.888</td>\n",
-       "      <td>Europe</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Germany</th>\n",
-       "      <td>80.940</td>\n",
-       "      <td>3874437</td>\n",
-       "      <td>357114</td>\n",
-       "      <td>0.916</td>\n",
-       "      <td>Europe</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Italy</th>\n",
-       "      <td>60.665</td>\n",
-       "      <td>2167744</td>\n",
-       "      <td>301336</td>\n",
-       "      <td>0.873</td>\n",
-       "      <td>Europe</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Japan</th>\n",
-       "      <td>127.061</td>\n",
-       "      <td>4602367</td>\n",
-       "      <td>377930</td>\n",
-       "      <td>0.891</td>\n",
-       "      <td>Asia</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>United Kingdom</th>\n",
-       "      <td>64.511</td>\n",
-       "      <td>2950039</td>\n",
-       "      <td>242495</td>\n",
-       "      <td>0.907</td>\n",
-       "      <td>Europe</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>United States</th>\n",
-       "      <td>318.523</td>\n",
-       "      <td>17348075</td>\n",
-       "      <td>9525067</td>\n",
-       "      <td>0.915</td>\n",
-       "      <td>America</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                Population       GDP  Surface Area    HDI Continent\n",
-       "France              63.951   2833687        640679  0.888    Europe\n",
-       "Germany             80.940   3874437        357114  0.916    Europe\n",
-       "Italy               60.665   2167744        301336  0.873    Europe\n",
-       "Japan              127.061   4602367        377930  0.891      Asia\n",
-       "United Kingdom      64.511   2950039        242495  0.907    Europe\n",
-       "United States      318.523  17348075       9525067  0.915   America"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-9e1bbbfb7273>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Canada'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
     }
    ],
    "source": [
     "df.drop('Canada')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-00cf07b74dcd>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "df"
    ]
   },
   {
@@ -4445,7 +4269,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
